# satmut_utils

./: CHANGES.txt  MANIFEST.in  README.md  install_satmut_utils.sh  pyproject.toml  satmut_utils.py  satmut_utils_env.yaml  satmut_utils_manual.md  setup.cfg  setup.py
docs/: satmut_utils_manual.md
satmut_utils/: definitions.py  satmut_utils.py
satmut_utils/analysis/: aligners.py  coordinate_mapper.py  read_editor.py  read_inducer.py  read_preprocessor.py  references.py  seq_utils.py  variant_caller.py  variant_postprocessor.py
satmut_utils/core_utils/: feature_file_utils.py  file_utils.py  string_utils.py  structure_utils.py  vcf_utils.py
satmut_utils/prototype/: codon_counts.py  design_conversion.py  error_correction.py  read_generators.py  summarization_utils.r  variant_generator.py
satmut_utils/prototype/codon_permutations/: codon_lookup.var_type-mnp.mnp_bases-3.txt  codon_lookup.var_type-snp.txt
satmut_utils/prototype/nnk_codon_permutations/: codon_lookup.var_type-mnp.mnp_bases-2.txt  hg19-tRNAs-confidence-set.codons.counts.txt
satmut_utils/scripts/: run_bowtie2_aligner.py  run_consensus_deduplicator.py  run_design_conversion.py  run_dms_tools_conversion.py  run_ec_data_generator.py  run_fastq_preprocessor.py  run_read_deduplicator.py  run_read_generator.py  run_read_inducer.py  run_read_masker.py  run_umi_extractor.py  run_variant_caller.py  run_variant_generator.py  run_vcf_subsampler.py  template.py
satmut_utils/tests/analysis/: test_aligners.py  test_coordinate_mapper.py  test_read_editor.py  test_read_preprocessor.py  test_references.py  test_seq_utils.py  test_variant_caller.py
satmut_utils/tests/core_utils/: test_feature_file_utils.py  test_file_utils.py  test_string_utils.py
satmut_utils/tests/prototype/: test_read_enumerators.py  test_read_generators.py
satmut_utils/tests/test_data/: 10FEB2019_test.dna.100.bam  10FEB2019_test.dna.100.bam.bai  10FEB2019_test.dna.100.masked.bam  10FEB2019_test.dna.100.masked.bam.bai  CBS.gff  CBS_pEZY3.fa  (+38 more)
src/: __init__.py  definitions.py  satmut_utils.py
src/analysis/: aligners.py  coordinate_mapper.py  read_editor.py  read_preprocessor.py  references.py  seq_utils.py  variant_caller.py
src/core_utils/: feature_file_utils.py  file_utils.py  string_utils.py  vcf_utils.py
src/prototype/: design_conversion.py  error_correction.py  modeling_utils.r  read_generators.py  run_design_conversion.py  summarization_utils.r  variant_generator.py
src/satmut_utils/: definitions.py  satmut_utils.py
src/scripts/: run_bowtie2_aligner.py  run_design_conversion.py  run_dmstools2_to_satmut_utils.py  run_ec_data_generator.py  run_fastq_preprocessor.py  run_mave_hgvs_annot.py  run_read_generator.py  run_satmut_utils_to_dimsum.py  run_variant_generator.py  run_vcf_subsampler.py
(+32 files in other folders)
