[metadata]
name = satmut_utils
version = 1.1.0-dev
author = Ian Hoskins
author_email = ianjameshoskins@utexas.edu
description = Tools for variant simulation and variant calling in paired end, targeted sequencing saturation mutagenesis experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ijhoskins/satmut_utils
project_urls =
    Bug Tracker = https://github.com/ijhoskins/satmut_utils/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
include_package_data = True
zip_safe = False
install_requires =
aenum>=3.0.0
bcftools>=1.14
bedtools>=2.30.0
bowtie2>=2.4.4
cutadapt>=3.5
nose2>=0.9.2
numpy>=1.21.4
pip>=21.3.1
pybedtools>=0.8.2
pysam>=0.17.0
samtools>=1.14
statistics>=1.0.3.5
umi_tools>=1.1.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    satmut_utils = satmut_utils.satmut_utils:main
    satmut_align = scripts.run_bowtie2_aligner:main
    satmut_trim = scripts.run_fastq_preprocessor:main
